# vicarius-vrx-mcp-server

./: .env.example  .gitignore  .snyk  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ENDPOINTS.md
scripts/: generate_from_openapi.py  run.ps1  run.sh  setup.ps1  setup.sh
src/vrx_mcp/: __init__.py  client.py  config.py  errors.py  server.py
src/vrx_mcp/tools/: __init__.py  _common.py  request.py
src/vrx_mcp/tools/_generated/: __init__.py  aggregation.py  automation.py  automation_task_templates.py  automations.py  date.py  endpoint.py  endpoint_attributes.py  endpoint_vulnerability.py  external_reference_external_references.py  incident_event.py  operating_system_family.py  organization_endpoint_external_reference_external_references.py  organization_endpoint_group.py  organization_endpoint_patch_patch_packages.py  organization_endpoint_publisher_operating_systems.py  organization_endpoint_publisher_product_versions.py  organization_endpoint_vulnerabilities.py  organization_external_reference_source_settings.py  organization_publisher_operating_systems.py  organization_publisher_products.py  organization_scan_input.py  patch_management.py  patch_package.py  patch_package_links.py  publisher_product_photos.py  script_template.py  script_template_commands.py  task.py  task_endpoints_event.py  task_event.py  task_template.py  user.py  user_invitation.py  vulnerability.py  vulnerability_attack_vectors.py  vulnerability_internal_tags.py  vulnerability_links.py
tests/: test_client.py  test_common.py  test_config.py  test_errors.py  test_generator.py  test_registration.py  test_request_tool.py  test_server.py  test_version.py
tests/fixtures/: mini_openapi.json
