[project]
name = "vrx-mcp"
version = "0.1.1"
description = "Unofficial MCP server for the Vicarius vRx External Data API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "McLeod Software" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "vicarius",
    "vrx",
    "vulnerability-management",
    "patch-management",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "build>=1.2.0", "twine>=5.0.0"]

[project.urls]
Homepage = "https://github.com/Space-C0wboy/vicarius-vrx-mcp-server"
Repository = "https://github.com/Space-C0wboy/vicarius-vrx-mcp-server"
Issues = "https://github.com/Space-C0wboy/vicarius-vrx-mcp-server/issues"

[project.scripts]
vrx-mcp = "vrx_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vrx_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/vrx_mcp/tools/_generated/*" = ["E501"]
# The generator emits long f-string code templates; long lines are inherent.
"scripts/generate_from_openapi.py" = ["E501"]
